@@ -1,5 +1,9 @@
 2009-11-11  John W. Eaton  <jwe@octave.org>
 
+	* miscellaneous/intwarning.m: Doc fix.
+
+2009-11-11  John W. Eaton  <jwe@octave.org>
+
 	* plot/stairs.m (__stairs__): Correct nargin check.  New demos.
 	From Jakub Kasse <jakub.kasse@tul.cz>.
 
